refactor: improve ProductService checkQuantities readability.
- Convert comments to English
- Add step-by-step documentation
- Optimize cache-aside pattern implementation
- CDC pattern implementation