@@ -1,5 +1,6 @@
 package com.example.product.service;
 
+import com.example.product.dto.ProductAvailabilityResponse;
 import com.example.product.dto.request.ProductCreateRequest;
 import com.example.product.dto.request.ProductQuantityCheckRequest;
 import com.example.product.dto.request.ProductUpdateRequest;
@@ -10,12 +11,11 @@ import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,9 +24,9 @@ public class ProductService implements IProductService {
 
 
     private final ProductRepository productRepository;
-
-
     private final ModelMapper modelMapper;
+    private final RedisTemplate<String, Integer> redisTemplate;
+    private static final String CACHE_PREFIX = "product:qty:";
 
     @Override
     public ProductResponse create(ProductCreateRequest request) {
@@ -64,23 +64,63 @@ public class ProductService implements IProductService {
 
     @Override
     @Transactional(readOnly = true)
-    public boolean isAvailable(List<ProductQuantityCheckRequest> items) {
-        List<Long> productIds = items.stream()
+    public List<ProductAvailabilityResponse> checkQuantities(List<ProductQuantityCheckRequest> requests) {
+        // Step 1: Extract product IDs from requests
+        List<Long> productIds = requests.stream()
                 .map(ProductQuantityCheckRequest::productId)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Product> products = productRepository.findAllById(productIds);
+        // Step 2: Try to get quantities from Redis cache first
+        Map<Long, Integer> cacheData = getQuantitiesFromCache(productIds);
 
-        Map<Long, Integer> stockMap = products.stream()
-                .collect(Collectors.toMap(Product::getId, Product::getStock));
+        // Step 3: Identify products that are not in cache
+        List<Long> missingIds = productIds.stream()
+                .filter(id -> !cacheData.containsKey(id))
+                .toList();
 
-        for (ProductQuantityCheckRequest item : items) {
-            Integer currentStock = stockMap.get(item.productId());
-            if (currentStock == null || currentStock < item.quantity()) {
-                return false;
-            }
+        // Step 4: Fetch missing data from database and update cache
+        if (!missingIds.isEmpty()) {
+            List<ProductQuantityCheckRequest> dbDataList = productRepository.findQuantitiesByIds(missingIds);
+
+            // Cache the actual data from database
+            dbDataList.forEach(data ->
+                    redisTemplate.opsForValue().set(CACHE_PREFIX + data.productId(), data.quantity())
+            );
+
+            // Add database data to our cache map
+            dbDataList.forEach(data -> cacheData.put(data.productId(), data.quantity()));
+
+            // For IDs that don't exist in DB, cache null to avoid repeated DB queries
+            Set<Long> foundIds = dbDataList.stream()
+                    .map(ProductQuantityCheckRequest::productId)
+                    .collect(Collectors.toSet());
+
+            missingIds.stream()
+                    .filter(id -> !foundIds.contains(id))
+                    .forEach(id -> {
+                        redisTemplate.opsForValue().set(CACHE_PREFIX + id, null);
+                        cacheData.put(id, null);
+                    });
         }
 
-        return true;
+        // Step 5: Build response with availability check
+        return requests.stream()
+                .map(req -> {
+                    Integer availableQty = cacheData.get(req.productId());
+                    boolean available = availableQty != null && availableQty >= req.quantity();
+                    return new ProductAvailabilityResponse(req.productId(), available, availableQty);
+                })
+                .toList();
+    }
+
+    private Map<Long, Integer> getQuantitiesFromCache(List<Long> productIds) {
+        Map<Long, Integer> cacheData = new HashMap<>();
+        productIds.forEach(id -> {
+            Integer cachedQty = redisTemplate.opsForValue().get(CACHE_PREFIX + id);
+            if (cachedQty != null) {
+                cacheData.put(id, cachedQty);
+            }
+        });
+        return cacheData;
     }
 }
